# REMLA-Project

./: .gitignore  .pylintrc  README.md  activity.md  dvc.yaml  main.py  params.yaml  pyproject.toml  report.txt  requirements.txt
.dvc/: config
.github/: test.yml
docs/: pipeline.md  setup.md
notebooks/: phishing-detection-cnn_1.ipynb
src/: data_downloader.py  data_loader.py  data_split.py  encode_labels.py  model.py  preprocess.py  test.py  test_model.py  tokenize_features.py  train.py  train_model.py  upload_model.py
tests/: integration_test.py  test_implicit_bias.py  test_integration.py  test_long_urls.py  test_memory_usage.py  test_numeric_mutations.py  test_parity.py  test_repeatability.py  test_tokenization_latency.py
