[tool.poetry]
name = "remla-project"
version = "0.1.0"
description = ""
authors = ["Eren Aydoslu <erenaydoslue@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "~2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
dvc = "^3.50.1"
dvc-gdrive = "^3.0.1"
dslinter = "^2.0.9"
pylint = "2.12.2"
requests = "^2.31.0"
tqdm = "^4.66.4"
dvc-gs = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
